--- a/index.html
+++ b/index.html
@@ -5,48 +5,77 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Earning Platform</title>
 <link rel="stylesheet" href="style.css">
+
+<!-- Firebase SDK -->
 <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-storage-compat.js"></script>
+
 </head>
 <body>
 
+<!-- LOGIN / SIGNUP -->
 <div class="auth-container" id="auth-container">
   <h1>Earning Platform</h1>
   <input type="email" id="email" placeholder="Email">
   <input type="password" id="password" placeholder="Password">
+  <input type="text" id="referralCode" placeholder="Referral Code (optional)">
   <button onclick="signup()">Sign Up</button>
   <button onclick="login()">Login</button>
 </div>
 
+<!-- DASHBOARD -->
 <div class="dashboard-container" id="dashboard-container" style="display:none;">
-  <h2>Dashboard</h2>
-  <p><strong>Total Balance:</strong> $<span id="totalBalance">0</span></p>
-  <p><strong>Earned Income:</strong> $<span id="earnedIncome">0</span></p>
-  <p><strong>Referral Income:</strong> $<span id="referralIncome">0</span></p>
-  <p><strong>Daily Income:</strong> $<span id="dailyIncome">0</span></p>
-  <p><strong>Next Collection:</strong> <span id="nextCollect">Not available</span></p>
-  <button id="collectBtn" onclick="collectIncome()" disabled>Collect Daily Income</button>
+  <h1>Dashboard</h1>
+  <div class="balance-cards">
+    <div class="card">
+      <h3>Total Balance</h3>
+      <p>$<span id="totalBalance">0</span></p>
+    </div>
+    <div class="card">
+      <h3>Earned Income</h3>
+      <p>$<span id="earnedIncome">0</span></p>
+    </div>
+    <div class="card">
+      <h3>Referral Income</h3>
+      <p>$<span id="referralIncome">0</span></p>
+    </div>
+    <div class="card">
+      <h3>My Referral Code</h3>
+      <p id="myReferralCode">---</p>
+      <button onclick="copyReferralLink()">Copy Link</button>
+    </div>
+  </div>
 
-  <h3>Packages</h3>
-  <button onclick="buyPackage('50$', 1)">Buy $50 Package ($1/day)</button>
-  <button onclick="buyPackage('100$', 2)">Buy $100 Package ($2/day)</button>
-  <button onclick="buyPackage('200$', 4)">Buy $200 Package ($4/day)</button>
-  <button onclick="buyPackage('300$', 8)">Buy $300 Package ($8/day)</button>
+  <div class="daily-income">
+    <h3>Daily Income</h3>
+    <p>$<span id="dailyIncome">0</span></p>
+    <p>Next Collection: <span id="nextCollect">Not Available</span></p>
+    <button id="collectBtn" onclick="collectIncome()" disabled>Collect Income</button>
+  </div>
 
-  <h3>Deposit</h3>
-  <button onclick="showDepositPage()">Go to Deposit Page</button>
-  <h3>Withdraw</h3>
-  <button onclick="showWithdrawPage()">Request Withdraw</button>
+  <h3>Packages (Buy with your balance)</h3>
+  <div class="packages">
+    <button onclick="buyPackage(50,1)">Buy $50 Package ($1/day)</button>
+    <button onclick="buyPackage(100,2)">Buy $100 Package ($2/day)</button>
+    <button onclick="buyPackage(200,4)">Buy $200 Package ($4/day)</button>
+    <button onclick="buyPackage(300,8)">Buy $300 Package ($8/day)</button>
+  </div>
 
-  <button onclick="logout()">Logout</button>
+  <div class="actions">
+    <button onclick="showDepositPage()">Deposit Funds</button>
+    <button onclick="showWithdrawPage()">Withdraw Request</button>
+    <button onclick="logout()">Logout</button>
+  </div>
 </div>
 
+<!-- DEPOSIT PAGE -->
 <div class="deposit-container" id="deposit-container" style="display:none;">
-  <h2>Deposit Funds</h2>
+  <h1>Deposit Funds</h1>
   <p><strong>JazzCash Account:</strong> 03007927545 Umair Ashraf</p>
-  <input type="number" id="depositAmount" placeholder="Amount">
+  <input type="number" id="depositAmountPKR" placeholder="Amount in PKR">
+  <p>Converted to USD: $<span id="convertedUSD">0</span></p>
   <input type="file" id="depositScreenshot">
   <button onclick="submitDeposit()">Submit Deposit</button>
   <h3>Deposit History</h3>
@@ -54,9 +83,10 @@
   <button onclick="backToDashboard()">Back</button>
 </div>
 
+<!-- WITHDRAW PAGE -->
 <div class="withdraw-container" id="withdraw-container" style="display:none;">
-  <h2>Withdraw Request</h2>
-  <input type="number" id="withdrawAmount" placeholder="Amount">
+  <h1>Withdraw Request</h1>
+  <input type="number" id="withdrawAmount" placeholder="Amount USD">
   <select id="withdrawMethod">
     <option value="JazzCash">JazzCash</option>
     <option value="Easypaisa">Easypaisa</option>
@@ -64,11 +94,20 @@
   </select>
   <input type="text" id="withdrawAccount" placeholder="Account Number / IBAN">
   <button onclick="submitWithdraw()">Submit Withdraw Request</button>
+
   <h3>Withdraw History</h3>
   <ul id="withdrawHistory"></ul>
   <button onclick="backToDashboard()">Back</button>
 </div>
 
 <script src="app.js"></script>
+<script>
+  // Autofill referral from URL
+  window.onload = ()=>{
+    const params = new URLSearchParams(window.location.search);
+    const ref = params.get('ref');
+    if(ref) document.getElementById('referralCode').value = ref;
+  }
+</script>
 </body>
 </html>
