--- a/login.html
+++ b/login.html
@@ -3,43 +3,39 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Login - Earning Platform</title>
-
-<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-<meta http-equiv="Pragma" content="no-cache" />
-<meta http-equiv="Expires" content="0" />
-
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-storage-compat.js"></script>
-<script src="app.js?v=1"></script>
-
-<style>
-body{font-family:Arial,sans-serif;background:#00D4FF;display:flex;justify-content:center;align-items:center;height:100vh;margin:0;}
-.container{background:#fff;padding:30px;border-radius:12px;box-shadow:0 10px 25px rgba(0,0,0,0.2);width:350px;text-align:center;}
-h2{margin-bottom:20px;color:#333;}
-input{width:100%;padding:10px;margin:10px 0;border-radius:6px;border:1px solid #ccc;}
-button{width:100%;padding:12px;margin:10px 0;border:none;border-radius:6px;background:#6C63FF;color:white;font-size:16px;cursor:pointer;}
-button:hover{background:#5950d4;}
-a{color:#6C63FF;text-decoration:none;}
-</style>
+<title>Admin Login</title>
+<link rel="stylesheet" href="style.css">
+<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
 </head>
 <body>
-<div class="container">
-<h2>Login</h2>
-<input type="email" id="email" placeholder="Email" required>
-<input type="password" id="password" placeholder="Password" required>
-<button onclick="login()">Login</button>
-<p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+<div class="auth-container">
+  <h1>Admin Login</h1>
+  <input type="email" id="adminEmail" placeholder="Email">
+  <input type="password" id="adminPassword" placeholder="Password">
+  <button onclick="adminLogin()">Login</button>
 </div>
-
 <script>
-firebase.auth().onAuthStateChanged(function(user){
-  if(user){
-    window.location.href="dashboard.html";
-  }
-});
+const firebaseConfig = {
+  apiKey: "AIzaSyCHX45QbjATYaI5yO50ghgSoZP98yXo3Hs",
+  authDomain: "earning-platform-a267f.firebaseapp.com",
+  databaseURL: "https://earning-platform-a267f-default-rtdb.firebaseio.com",
+  projectId: "earning-platform-a267f",
+  storageBucket: "earning-platform-a267f.firebasestorage.app",
+  messagingSenderId: "785014377238",
+  appId: "1:785014377238:web:3ee94e861b97f4a31c1e37",
+  measurementId: "G-QRM1VKP98G"
+};
+firebase.initializeApp(firebaseConfig);
+const auth = firebase.auth();
+
+function adminLogin(){
+  const email = document.getElementById('adminEmail').value;
+  const password = document.getElementById('adminPassword').value;
+  auth.signInWithEmailAndPassword(email,password)
+  .then(()=>window.location.href='admin.html')
+  .catch(e=>alert(e.message));
+}
 </script>
 </body>
 </html>
