--- a/index.html
+++ b/index.html
@@ -15,16 +15,9 @@
   <input type="email" id="email" placeholder="Email">
   <input type="password" id="password" placeholder="Password">
   <input type="text" id="referralCode" placeholder="Referral Code (optional)">
-  <button onclick="signup()">Sign Up</button>
-  <button onclick="login()">Login</button>
+  <button id="signupBtn">Sign Up</button>
+  <button id="loginBtn">Login</button>
 </div>
 <script src="app.js"></script>
-<script>
-window.onload = ()=>{
-  const params = new URLSearchParams(window.location.search);
-  const ref = params.get('ref');
-  if(ref) document.getElementById('referralCode').value = ref;
-}
-</script>
 </body>
 </html>
