--- a/admin.html
+++ b/admin.html
@@ -12,16 +12,11 @@
 <body>
 <div class="admin-container">
   <h1>Admin Dashboard</h1>
-
   <h2>Users</h2>
   <table border="1" width="100%" id="usersTable">
     <thead>
       <tr>
-        <th>Email</th>
-        <th>Total Balance</th>
-        <th>Earned Income</th>
-        <th>Referral Income</th>
-        <th>Package</th>
+        <th>Email</th><th>Total Balance</th><th>Earned Income</th><th>Referral Income</th><th>Package</th>
       </tr>
     </thead>
     <tbody></tbody>
@@ -31,11 +26,7 @@
   <table border="1" width="100%" id="depositTable">
     <thead>
       <tr>
-        <th>User Email</th>
-        <th>Amount USD</th>
-        <th>Amount PKR</th>
-        <th>Screenshot</th>
-        <th>Actions</th>
+        <th>User Email</th><th>USD</th><th>PKR</th><th>Screenshot</th><th>Actions</th>
       </tr>
     </thead>
     <tbody></tbody>
@@ -45,11 +36,7 @@
   <table border="1" width="100%" id="withdrawTable">
     <thead>
       <tr>
-        <th>User Email</th>
-        <th>Amount USD</th>
-        <th>Method</th>
-        <th>Account</th>
-        <th>Actions</th>
+        <th>Email</th><th>Amount USD</th><th>Method</th><th>Account</th><th>Actions</th>
       </tr>
     </thead>
     <tbody></tbody>
