--- a/dashboard.html
+++ b/dashboard.html
@@ -3,43 +3,63 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dashboard</title>
+<title>Earning Platform - Dashboard</title>
 <link rel="stylesheet" href="style.css">
 <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
+<script src="app.js" defer></script>
 </head>
 <body>
 <div class="dashboard-container" id="dashboard-container">
-  <h1>Dashboard</h1>
-  <div class="balance-cards">
-    <div class="card"><h3>Total Balance</h3><p>$<span id="totalBalance">0</span></p></div>
-    <div class="card"><h3>Earned Income</h3><p>$<span id="earnedIncome">0</span></p></div>
-    <div class="card"><h3>Referral Income</h3><p>$<span id="referralIncome">0</span></p></div>
-    <div class="card"><h3>My Referral Code</h3><p id="myReferralCode">---</p><button onclick="copyReferralLink()">Copy Link</button></div>
-  </div>
-
-  <div class="daily-income">
-    <h3>Daily Income</h3>
-    <p>$<span id="dailyIncome">0</span></p>
-    <p>Next Collection: <span id="nextCollect">Not Available</span></p>
-    <button id="collectBtn" disabled>Collect Income</button>
-  </div>
-
-  <h3>Packages</h3>
-  <div class="packages">
-    <button onclick="buyPackage(50,1)">Buy $50 ($1/day)</button>
-    <button onclick="buyPackage(100,2)">Buy $100 ($2/day)</button>
-    <button onclick="buyPackage(200,4)">Buy $200 ($4/day)</button>
-    <button onclick="buyPackage(300,8)">Buy $300 ($8/day)</button>
-  </div>
-
-  <div class="actions">
-    <a href="deposit.html"><button>Deposit Funds</button></a>
-    <a href="withdraw.html"><button>Withdraw Request</button></a>
+    <h1>Dashboard</h1>
     <button onclick="logout()">Logout</button>
-  </div>
+
+    <!-- Balance Cards -->
+    <div class="balance-cards">
+        <div class="card">
+            <h3>Total Balance</h3>
+            <p id="totalBalance">0</p>
+        </div>
+        <div class="card">
+            <h3>Earned Income</h3>
+            <p id="earnedIncome">0</p>
+        </div>
+        <div class="card">
+            <h3>Referral Income</h3>
+            <p id="referralIncome">0</p>
+        </div>
+    </div>
+
+    <!-- Daily Income Section -->
+    <div class="daily-income">
+        <h3>Daily Income</h3>
+        <p id="dailyIncome">0</p>
+        <p>Next collect available in: <span id="nextCollect">---</span></p>
+        <button id="collectBtn">Collect Income</button>
+    </div>
+
+    <!-- Packages -->
+    <div class="packages">
+        <h3>Buy Packages</h3>
+        <button onclick="buyPackage(50,1)">$50 - Daily $1</button>
+        <button onclick="buyPackage(100,2)">$100 - Daily $2</button>
+        <button onclick="buyPackage(200,4)">$200 - Daily $4</button>
+        <button onclick="buyPackage(300,8)">$300 - Daily $8</button>
+    </div>
+
+    <!-- Referral -->
+    <div class="referral">
+        <h3>Referral Code:</h3>
+        <p id="myReferralCode">---</p>
+        <button onclick="copyReferralLink()">Copy Referral Link</button>
+    </div>
+
+    <!-- Navigation to Deposit / Withdraw -->
+    <div class="actions">
+        <button onclick="window.location.href='deposit.html'">Deposit</button>
+        <button onclick="window.location.href='withdraw.html'">Withdraw</button>
+    </div>
 </div>
-<script src="app.js"></script>
 </body>
 </html>
