--- a/withdraw.html
+++ b/withdraw.html
@@ -3,27 +3,41 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Withdraw Request</title>
+<title>Withdraw - Earning Platform</title>
 <link rel="stylesheet" href="style.css">
 <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
+<script src="app.js" defer></script>
 </head>
 <body>
 <div class="withdraw-container">
-  <h1>Withdraw Request</h1>
-  <input type="number" id="withdrawAmount" placeholder="Amount USD">
-  <select id="withdrawMethod">
-    <option value="JazzCash">JazzCash</option>
-    <option value="Easypaisa">Easypaisa</option>
-    <option value="BankTransfer">Bank Transfer</option>
-  </select>
-  <input type="text" id="withdrawAccount" placeholder="Account / IBAN">
-  <button id="withdrawBtn">Submit Withdraw</button>
-  <h3>Withdraw History</h3>
-  <ul id="withdrawHistory"></ul>
-  <a href="dashboard.html"><button>Back</button></a>
+    <h1>Withdraw Funds</h1>
+    <button onclick="window.location.href='dashboard.html'">Back to Dashboard</button>
+
+    <div class="withdraw-form">
+        <label>Amount (USD):</label>
+        <input type="number" id="withdrawAmount" placeholder="e.g., 10">
+        <label>Method:</label>
+        <select id="withdrawMethod">
+            <option value="JazzCash">JazzCash</option>
+            <option value="Easypaisa">Easypaisa</option>
+            <option value="BankTransfer">Bank Transfer</option>
+        </select>
+        <label>Account Number / Details:</label>
+        <input type="text" id="withdrawAccount" placeholder="e.g., 03007927545">
+        <button id="withdrawBtn">Submit Withdraw</button>
+    </div>
+
+    <h3>Withdrawal History</h3>
+    <table>
+        <thead>
+            <tr><th>Amount (USD)</th><th>Method</th><th>Account</th><th>Status</th></tr>
+        </thead>
+        <tbody id="withdrawHistory">
+            <!-- Filled by JS -->
+        </tbody>
+    </table>
 </div>
-<script src="app.js"></script>
 </body>
 </html>
